--- a/Kernel Density Estimation in Python.ipynb
+++ b/Kernel Density Estimation in Python.ipynb
@@ -722,7 +722,13 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "params = {'bandwidth': np.logspace(-1, 1, 20)}\n",
+    "grid = GridSearchCV(KernelDensity(), params)\n",
+    "grid.fit(data)\n",
+    "\n",
+    "print(\"best bandwidth: {0}\".format(grid.best_estimator_.bandwidth))"
+   ]
   }
  ],
  "metadata": {
