bandwidth almost dome

--- a/KDE_3.ipynb
+++ b/KDE_3.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -58,7 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "typeid = dict(cursor.fetchall())"
@@ -345,7 +349,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = list(map(c.convert,envdf[envdf.typeID==102].loc[:,['lat','lng']].values))"
@@ -406,8 +412,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
+   "execution_count": 97,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start_bandwidth = 100\n",
@@ -423,23 +431,23 @@
     "    best = grid.best_estimator_.bandwidth\n",
     "    end_bandwidth = end_bandwidth + 100\n",
     "    start_bandwidth = start_bandwidth + 100\n",
-    "    if best > end_bandwidth or end_bandwidth>2100:\n",
+    "    if best < start_bandwidth or end_bandwidth>2100:\n",
     "        break\n",
     "    #start_bandwidth = start_bandwidth + 500"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2101"
+       "1901"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,16 +458,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1600"
+       "1450"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,9 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -594,16 +600,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 11 µs, sys: 0 ns, total: 11 µs\n",
+      "Wall time: 13.6 µs\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "from sklearn.neighbors import KernelDensity\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "result2 = {}\n",
-    "for key in list(typeid.keys())[1:]:\n",
+    "def getbw(key):\n",
     "    start_bandwidth = 100\n",
     "    end_bandwidth = 501\n",
     "    step = 100\n",
@@ -617,9 +632,207 @@
     "        best = grid.best_estimator_.bandwidth\n",
     "        end_bandwidth = end_bandwidth + 100\n",
     "        start_bandwidth = start_bandwidth + 100\n",
-    "    if best > end_bandwidth or end_bandwidth>2100:\n",
-    "        break\n",
-    "    result2[key] = grid.best_estimator_"
+    "        if best < start_bandwidth or end_bandwidth>3000:\n",
+    "            break\n",
+    "    return grid.best_estimator_\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result2 = {}\n",
+    "for key in list(typeid.keys())[16:]:\n",
+    "    result2[key] = getbw(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{403: KernelDensity(algorithm='auto', atol=0, bandwidth=1400, breadth_first=True,\n",
+       "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+       "        metric_params=None, rtol=0),\n",
+       " 501: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
+       "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+       "        metric_params=None, rtol=0),\n",
+       " 502: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
+       "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+       "        metric_params=None, rtol=0),\n",
+       " 503: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
+       "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+       "        metric_params=None, rtol=0),\n",
+       " 504: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
+       "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+       "        metric_params=None, rtol=0),\n",
+       " 505: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
+       "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+       "        metric_params=None, rtol=0)}"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "result3 = {102: KernelDensity(algorithm='auto', atol=0, bandwidth=2100, breadth_first=True,\n",
+    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+    "        metric_params=None, rtol=0),\n",
+    " 201: KernelDensity(algorithm='auto', atol=0, bandwidth=900, breadth_first=True,\n",
+    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+    "        metric_params=None, rtol=0),\n",
+    " 202: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
+    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+    "        metric_params=None, rtol=0),\n",
+    " 203: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
+    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+    "        metric_params=None, rtol=0),\n",
+    " 204: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
+    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+    "        metric_params=None, rtol=0),\n",
+    " 205: KernelDensity(algorithm='auto', atol=0, bandwidth=1700, breadth_first=True,\n",
+    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+    "        metric_params=None, rtol=0),\n",
+    " 206: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
+    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+    "        metric_params=None, rtol=0),\n",
+    " 207: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
+    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+    "        metric_params=None, rtol=0),\n",
+    " 301: KernelDensity(algorithm='auto', atol=0, bandwidth=2400, breadth_first=True,\n",
+    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+    "        metric_params=None, rtol=0),\n",
+    " 302: KernelDensity(algorithm='auto', atol=0, bandwidth=1200, breadth_first=True,\n",
+    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+    "        metric_params=None, rtol=0),\n",
+    " 303: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
+    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+    "        metric_params=None, rtol=0),\n",
+    " 304: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
+    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+    "        metric_params=None, rtol=0),\n",
+    " 305: KernelDensity(algorithm='auto', atol=0, bandwidth=2200, breadth_first=True,\n",
+    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+    "        metric_params=None, rtol=0),\n",
+    " 401: KernelDensity(algorithm='auto', atol=0, bandwidth=1600, breadth_first=True,\n",
+    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+    "        metric_params=None, rtol=0),\n",
+    " 402: KernelDensity(algorithm='auto', atol=0, bandwidth=1300, breadth_first=True,\n",
+    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+    "        metric_params=None, rtol=0),\n",
+    " 403: KernelDensity(algorithm='auto', atol=0, bandwidth=1400, breadth_first=True,\n",
+    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+    "        metric_params=None, rtol=0)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_result = {}\n",
+    "all_result.update(result)\n",
+    "all_result.update(result2)\n",
+    "all_result.update(result3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101 Food 300\n",
+      "102 Supermarket 2100\n",
+      "201 Bus 900\n",
+      "202 MRT 2900\n",
+      "203 UBike 2900\n",
+      "204 Train 2900\n",
+      "205 Exam 1700\n",
+      "206 Charger 2900\n",
+      "207 Towing 2900\n",
+      "301 BookStore 2400\n",
+      "302 DepartmentStore 1200\n",
+      "303 Library 2900\n",
+      "304 Museum 2900\n",
+      "305 Theater 2200\n",
+      "401 Park 1600\n",
+      "402 Scenic 1300\n",
+      "403 Sport 1400\n",
+      "501 School 2900\n",
+      "502 Hospital 2900\n",
+      "503 Pharmacy 2900\n",
+      "504 Police 2900\n",
+      "505 FireStation 2900\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in all_result.items():\n",
+    "    print(key, typeid[key], value.bandwidth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bw_result = {}\n",
+    "for key, value in all_result.items():\n",
+    "    bw_result[key] = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Object of type 'KernelDensity' is not JSON serializable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-125-294ca777ddbe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./tmp/bw_result.json'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_result\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/conda/lib/python3.6/json/__init__.py\u001b[0m in \u001b[0;36mdump\u001b[0;34m(obj, fp, skipkeys, ensure_ascii, check_circular, allow_nan, cls, indent, separators, default, sort_keys, **kw)\u001b[0m\n\u001b[1;32m    177\u001b[0m     \u001b[0;31m# could accelerate with writelines in some versions of Python, at\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    178\u001b[0m     \u001b[0;31m# a debuggability cost\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 179\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mchunk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    180\u001b[0m         \u001b[0mfp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    181\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/json/encoder.py\u001b[0m in \u001b[0;36m_iterencode\u001b[0;34m(o, _current_indent_level)\u001b[0m\n\u001b[1;32m    428\u001b[0m             \u001b[0;32myield\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0m_iterencode_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_current_indent_level\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    429\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 430\u001b[0;31m             \u001b[0;32myield\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0m_iterencode_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_current_indent_level\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    431\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    432\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mmarkers\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/json/encoder.py\u001b[0m in \u001b[0;36m_iterencode_dict\u001b[0;34m(dct, _current_indent_level)\u001b[0m\n\u001b[1;32m    402\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    403\u001b[0m                     \u001b[0mchunks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_iterencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_current_indent_level\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 404\u001b[0;31m                 \u001b[0;32myield\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mchunks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    405\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mnewline_indent\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    406\u001b[0m             \u001b[0m_current_indent_level\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/json/encoder.py\u001b[0m in \u001b[0;36m_iterencode\u001b[0;34m(o, _current_indent_level)\u001b[0m\n\u001b[1;32m    435\u001b[0m                     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Circular reference detected\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    436\u001b[0m                 \u001b[0mmarkers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmarkerid\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 437\u001b[0;31m             \u001b[0mo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_default\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    438\u001b[0m             \u001b[0;32myield\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0m_iterencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_current_indent_level\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    439\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mmarkers\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/json/encoder.py\u001b[0m in \u001b[0;36mdefault\u001b[0;34m(self, o)\u001b[0m\n\u001b[1;32m    178\u001b[0m         \"\"\"\n\u001b[1;32m    179\u001b[0m         raise TypeError(\"Object of type '%s' is not JSON serializable\" %\n\u001b[0;32m--> 180\u001b[0;31m                         o.__class__.__name__)\n\u001b[0m\u001b[1;32m    181\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    182\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Object of type 'KernelDensity' is not JSON serializable"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "with open('./tmp/bw_result.json', 'w',encoding='utf-8') as f:\n",
+    "    json.dump(all_result,f)"
    ]
   },
   {
